--- a/localizations/english.json
+++ b/localizations/english.json
@@ -72,5 +72,6 @@
     "FIADetails": "Details",
     "FIAVerdict": "Verdict",
     "FIASignature": "The Stewards",
-    "FIATheStewards": "The Stewards"
+    "FIATheStewards": "The Stewards",
+    "COMMENTATOR": "COMMENTATOR(S)"
 }
