--- a/localizations/english.json
+++ b/localizations/english.json
@@ -33,7 +33,7 @@
     "Winner :": "Winner :",
     "PAUL RICARD GRAND PRIX" : "FRENCH GRAND PRIX",
     "AUSTIN GRAND PRIX" : "LENOVO UNITED STATES GRAND PRIX",
-    "MONTREAL GRAND PRIX" : "PEIRELLI GRAND PRIX DU CANADA",
+    "MONTREAL GRAND PRIX" : "PIRELLI GRAND PRIX DU CANADA",
     "INTERLAGOS GRAND PRIX" : "ROLEX GRANDE PREMIO DE SAO PALO",
     "SILVERSTONE GRAND PRIX" : "ARAMCO BRITISH GRAND PRIX",
     "HUNGARORING GRAND PRIX" : "QATAR AIRWAYS HUNGARIAN GRAND PRIX",
